alpm-types/src/snapshots/openpgp::invalid_packager@case_4_two_wrapped_addresses.snap
---
source: alpm-types/src/openpgp.rs
---
Parser failed with the following error:
error: invalid packager: unexpected trailing content
 | 
 | Foobar McFooface <foobar@mcfooface.org> <foobar@mcfoofacemcfooface.org>
 | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^ expected end of input.
 | 
 = while parsing:
   alpm packager: (Foobar McFooface <fo…)
   → invalid packager: unexpected trailing content
   → expected end of input.
